--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <!-- Product 1 -->
                 <div class="product-card bg-secondary rounded-lg overflow-hidden shadow-md transition duration-500 ease-in-out" data-aos="fade-up" data-aos-delay="100">
                     <div class="relative">
-                        <img src="http://static.photos/pink/640x360/2" alt="Pearl Bracelet" class="w-full h-64 object-cover">
+                        <img src="https://pin.it/3TQdz4B3O" alt="Pearl Bracelet" class="w-full h-64 object-cover">
                         <div class="absolute top-4 right-4 bg-accent text-white px-3 py-1 rounded-full text-xs font-bold">BESTSELLER</div>
                     </div>
                     <div class="p-6">
