--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <!-- Product 2 -->
                 <div class="product-card bg-secondary rounded-lg overflow-hidden shadow-md transition duration-500 ease-in-out" data-aos="fade-up" data-aos-delay="200">
                     <div class="relative">
-                        <img src="http://static.photos/pink/640x360/3" alt="Gemstone Bracelet" class="w-full h-64 object-cover">
+                        <img src="https://i.pinimg.com/736x/1f/97/c7/1f97c7e9cd479f9ebd370ad9272e526d.jpg" alt="Gemstone Bracelet" class="w-full h-64 object-cover">
                     </div>
                     <div class="p-6">
                         <h3 class="title-font text-xl font-bold text-dark mb-2">Gemstone Harmony</h3>
