--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <!-- Product 3 -->
                 <div class="product-card bg-secondary rounded-lg overflow-hidden shadow-md transition duration-500 ease-in-out" data-aos="fade-up" data-aos-delay="300">
                     <div class="relative">
-                        <img src="http://static.photos/pink/640x360/4" alt="Birthstone Bracelet" class="w-full h-64 object-cover">
+                        <img src="https://www.pinterest.com/pin/65091157109551990#imgViewer" alt="Birthstone Bracelet" class="w-full h-64 object-cover">
                         <div class="absolute top-4 right-4 bg-accent text-white px-3 py-1 rounded-full text-xs font-bold">NEW</div>
                     </div>
                     <div class="p-6">
