--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     <section class="hero-pattern relative py-20 px-6">
         <div class="container mx-auto flex flex-col md:flex-row items-center">
             <div class="md:w-1/2 mb-10 md:mb-0" data-aos="fade-right">
-                <h1 class="title-font text-4xl md:text-6xl font-bold text-grey mb-6">Handcrafted Beaded Bracelets</h1>
-                <p class="text-grey text-lg mb-8">Each piece is lovingly made with premium materials and your unique style in mind.</p>
+                <h1 class="title-font text-4xl md:text-6xl font-bold text-black mb-6">Handcrafted Beaded Bracelets</h1>
+                <p class="text-black text-lg mb-8">Each piece is lovingly made with premium materials and your unique style in mind.</p>
                 <div class="flex space-x-4">
                     <button class="bg-accent hover:bg-dark text-white font-bold py-3 px-6 rounded-full transition duration-300 transform hover:scale-105">
                         Shop Now
