--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="container mx-auto px-6">
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-10 md:mb-0" data-aos="fade-right">
-                    <img src="http://static.photos/pink/640x360/5" alt="Custom Bracelet" class="rounded-lg shadow-xl w-full max-w-md border-8 border-white transform -rotate-6">
+                    <img src="https://i.pinimg.com/1200x/c6/5b/9d/c65b9d950249b2c541182acf0aa97cec.jpg" alt="Custom Bracelet" class="rounded-lg shadow-xl w-full max-w-md border-8 border-white transform -rotate-6">
                 </div>
                 <div class="md:w-1/2 md:pl-12" data-aos="fade-left">
                     <h2 class="title-font text-3xl md:text-4xl font-bold text-white mb-6">Create Your Perfect Bracelet</h2>
