--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <style>
         body {
             font-family: 'Montserrat', sans-serif;
+            overflow-x: hidden;
         }
         .title-font {
             font-family: 'Playfair Display', serif;
