--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
             <div class="md:w-1/2 flex justify-center" data-aos="fade-left">
                 <div class="relative">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREd0eJwd1NvrqnVoLIUjMZUi29qJPTky6mXzdPcglu0A&s=10" alt="Beaded Bracelet" class="rounded-lg shadow-xl w-full max-w-md border-8 border-white transform rotate-6">
+                    <img src="https://i.pinimg.com/1200x/a4/a5/53/a4a5532f8dd381fef761a74b7131d04c.jpg" alt="Beaded Bracelet" class="rounded-lg shadow-xl w-full max-w-md border-8 border-white transform rotate-6">
                     <div class="absolute -bottom-6 -right-6 bg-white p-4 rounded-full shadow-lg">
                         <i data-feather="star" class="text-accent w-8 h-8"></i>
                     </div>
