--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     </section>
 
     <!-- Newsletter -->
-    <section class="py-16 bg-primary">
+    <section id="newsletter" class="py-16 bg-primary">
         <div class="container mx-auto px-6 text-center">
             <div class="max-w-2xl mx-auto" data-aos="fade-up">
                 <h2 class="title-font text-3xl md:text-4xl font-bold text-white mb-4">Join Our Beading Community</h2>
