--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <h3 class="title-font text-xl font-bold text-dark mb-2">Pearl Elegance</h3>
                         <p class="text-gray-600 mb-4">Luxurious freshwater pearls with gold accents</p>
                         <div class="flex justify-between items-center">
-                            <span class="font-bold text-dark">$49.99</span>
+                            <span class="font-bold text-dark">₦8,999</span>
                             <button class="bg-primary hover:bg-accent text-white px-4 py-2 rounded-full text-sm transition duration-300">Add to Cart</button>
                         </div>
                     </div>
@@ -156,7 +156,7 @@
                         <h3 class="title-font text-xl font-bold text-dark mb-2">Gemstone Harmony</h3>
                         <p class="text-gray-600 mb-4">Natural gemstones with silver charms</p>
                         <div class="flex justify-between items-center">
-                            <span class="font-bold text-dark">$39.99</span>
+                            <span class="font-bold text-dark">₦6000</span>
                             <button class="bg-primary hover:bg-accent text-white px-4 py-2 rounded-full text-sm transition duration-300">Add to Cart</button>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                         <h3 class="title-font text-xl font-bold text-dark mb-2">Birthstone Charm</h3>
                         <p class="text-gray-600 mb-4">Personalized with your birthstone</p>
                         <div class="flex justify-between items-center">
-                            <span class="font-bold text-dark">$59.99</span>
+                            <span class="font-bold text-dark">₦7000</span>
                             <button class="bg-primary hover:bg-accent text-white px-4 py-2 rounded-full text-sm transition duration-300">Add to Cart</button>
                         </div>
                     </div>
