--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
                 <h2 class="title-font text-3xl md:text-4xl font-bold text-white mb-4">Join Our Beading Community</h2>
                 <p class="text-white mb-8">Subscribe to receive exclusive offers, styling tips, and first access to new collections.</p>
                 <div class="flex flex-col sm:flex-row justify-center max-w-md mx-auto">
-                    <input type="email" placeholder="Your email address" class="px-4 py-3 rounded-full focus:outline-none mb-2 sm:mb-0 sm:mr-2 flex-grow">
-                    <button class="bg-accent hover:bg-dark text-white font-bold py-3 px-6 rounded-full transition duration-300">
+                    <input id="email-input type="email" placeholder="Your email address" class="px-4 py-3 rounded-full focus:outline-none mb-2 sm:mb-0 sm:mr-2 flex-grow">
+                    <button id="subscribe-btn" class="bg-accent hover:bg-dark text-white font-bold py-3 px-6 rounded-full transition duration-300">
                         Subscribe
                     </button>
                 </div>
