--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;600&display=swap">
     <style>
         body {
+            width: 100%;
             font-family: 'Montserrat', sans-serif;
             overflow-x: hidden;
         }
